-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.920 2011-04-01 22:02:02 guru Exp $
-----------------------------------------------------------------------------------------
				
2011-04-01	pwessel
	* gmt_support.c:	Now let GMT_inonout handle polygons with holes so the main
				code need not be concerned outer than skipping the holes.
	* gmtselect_func.c:	Now use GMT_inonout with no extra checks.
	* grdmask_func.c:	---"---
	* grdmath_func.c:	---"---
	* spotter/grdpmodeler_func.c:	---"---
	* spotter/grdrotater_func.c:	---"---
	* gmt.{c,txt}:		Renamed from upper case GMT.{c,txt}

2011-04-01	jluis
	* gmtapi_util.c:	First cut of functions to read images via GDAL and store them
	* gmt_grdio.[ch]	in the new IMAGE container. (Still very crude and probably buggy) 

2011-03-31	pwessel
	* ps2raster_func.c:	Added modifier +o<foldername> to generate a KML snipped in
				a named folder without the KML header and trailer.  Used to
				build multi-component KML files in association with gmt2kml.
	* gmt_io.c:		Let GMT_write_segmentheader deal with the segment marker so
				that internally we only have a clean header (or NULL).
				
2011-03-30	jluis
	* gmt_esri_io.c:	Also detects the Arc/Info float binary format (GRIDFLOAT)
	* grdimage_func.c:	Overzealous -C testing prevented the usage of an image via -Dr 

2011-03-29	pwessel
	* surface_func.c:	Improved gridding of pixel-registered grids by temporarily adding
				an extra row/col (which are removed before output).  This ensures
				better factoring throughout the multigrid process.

2011-03-28	remko
	* gmt_init.c:		New format of -i option: -i<cols>[l][s<scale>][o<offset][,...].
	* common_options.txt, explain_-icols_full.txt, gmt_synopsis.h:	---"---

2011-03-28	pwessel
	* *.[ch]:		Replace STAT with GMT_STAT to avoid name clashes on some systems.
	* misc/gmt2kml_func.c	Ensure pen is given in points and >= 1 in width.
	* misc/gmt2kml.txt:	Explain how pen needs to be set.